--- a/MVC-TV-Shop/appsettings.json
+++ b/MVC-TV-Shop/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDb" : "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TvShopDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "LocalDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TvShopDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "SomeecomDb": "workstation id=TVShopDb.mssql.somee.com;packet size=4096;user id=QWASZX_SQLLogin_3;pwd=iwvroyq3lt;data source=TVShopDb.mssql.somee.com;persist security info=False;initial catalog=TVShopDb"
   }
 }
